--- a/admin/main_count.html
+++ b/admin/main_count.html
@@ -19,25 +19,25 @@
         <div class="row spannel_list">
             <div class="col-sm-3 col-xs-6">
                 <div class="spannel">
-                    <em>10015</em><span>篇</span>
+                    <em class="art_sum">10015</em><span>篇</span>
                     <b>总文章数</b>
                 </div>
             </div>
             <div class="col-sm-3 col-xs-6">
                 <div class="spannel scolor01">
-                    <em>123</em><span>篇</span>
+                    <em class="artday_new">123</em><span>篇</span>
                     <b>日新增文章数</b>
                 </div>
             </div>
             <div class="col-sm-3 col-xs-6">
                 <div class="spannel scolor02">
-                    <em>35</em><span>条</span>
+                    <em class="com_sum">35</em><span>条</span>
                     <b>评论总数</b>
                 </div>
             </div>
             <div class="col-sm-3 col-xs-6">
                 <div class="spannel scolor03">
-                    <em>123</em><span>条</span>
+                    <em class="comday_new">123</em><span>条</span>
                     <b>日新增评论数</b>
                 </div>
             </div>
@@ -62,213 +62,260 @@
 
     <!-- 折线图 -->
     <script>
-        var json = '{"code":200,"msg":"获取成功","date":[{"date":"2019-05-20","count":23},{"date":"2019-05-21","count":19},{"date":"2019-05-22","count":29},{"date":"2019-05-23","count":24},{"date":"2019-05-24","count":28},{"date":"2019-05-25","count":28},{"date":"2019-05-26","count":19},{"date":"2019-05-27","count":25},{"date":"2019-05-28","count":25}]}';
-        var obj = JSON.parse(json);
-        loadEchars(obj);
-
-        function loadEchars(obj) {
-            // 基于准备好的dom，初始化echarts实例
+        (function () {
             var myChart = echarts.init(document.getElementById('curve_show'));
+            var xData = [];
+            var yData = [];
 
-            var data = [];
-            var date = [];
-            for (var i = 0; i < obj.date.length; i++) {
-                data.push(obj.date[i].count);
-                date.push(obj.date[i].date);
-            }
-
-            option = {
-                tooltip: {
-                    trigger: 'axis',
-                    position: function (pt) {
-                        return [pt[0], '10%'];
-                    }
-                },
-                title: {
-                    left: 'center',
-                    text: '月新增文章数',
-                },
-
-                xAxis: {
-                    name: '日',
-                    type: 'category',
-                    boundaryGap: false,
-                    data: date
-                },
-                legend: {
-                    data: ['新增文章'],
-                    top: '40'
-                },
-                toolbox: {
-                    show: true,
-                    feature: {
-                        dataZoom: {
-                            yAxisIndex: 'none'
-                        },
-                        dataView: { readOnly: false },
-                        magicType: { type: ['line', 'bar'] },
-                        restore: {},
-                        saveAsImage: {}
+            //(1).实例化ajax对象
+            var xhr = new XMLHttpRequest();
+            //(2).设置请求方法和地址
+            //get请求的数据直接添加在url的后面 格式是 url?key=value
+            xhr.open('get', 'http://localhost:8080/api/v1/admin/data/article');
+            xhr.setRequestHeader('Authorization', localStorage.getItem('token'))
+            //(3).发送请求
+            xhr.send();
+            //(4).注册回调函数
+            xhr.onload = function () {
+                var backData = JSON.parse(xhr.responseText)
+                for (var i = 0; i < backData.date.length; i++) {
+                    var obj = backData.date[i]
+                    xData.push(obj.date);
+                    yData.push(obj.count);
+                }
+                loadingecharts();
+            };
+            // 指定图表的配置项和数据
+            function loadingecharts() {
+                option = {
+                    tooltip: {
+                        trigger: 'axis',
+                        position: function (pt) {
+                            return [pt[0], '10%'];
+                        }
                     },
-                    right: 50
-                },
-                yAxis: {
-                    type: 'value',
-                    boundaryGap: [0, '100%']
-                },
-                series: [
-                    {
-                        name: '新增文章',
-                        type: 'line',
-                        smooth: true,
-                        // symbol: 'none',
-                        sampling: 'average',
-                        itemStyle: {
-                            color: '#f80'
-                        },
-                        areaStyle: {
-                            color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{
-                                offset: 0,
-                                color: 'rgba(255,136,0,0.39)'
-                            }, {
-                                offset: .34,
-                                color: 'rgba(255,180,0,0.25)'
+                    title: {
+                        left: 'center',
+                        text: '月新增文章数',
+                    },
+                    toolbox: {
+                        show: true,
+                        feature: {
+                            dataZoom: {
+                                yAxisIndex: 'none'
                             },
-                            {
-                                offset: 1,
-                                color: 'rgba(255,222,0,0.00)'
-                            }])
-                        },
-                        data: data
-                    }
-                ],
+                            dataView: { readOnly: false },
+                            magicType: { type: ['line', 'bar'] },
+                            restore: {},
+                            saveAsImage: {}
+                        }
+                    },
+                    legend: {
+                        data: ['新增文章'],
+                        left: 'center',
+                        top: 30,
+
+                    },
+                    xAxis: {
+                        type: 'category',
+                        boundaryGap: false,
+                        data: xData
+                    },
+                    yAxis: {
+                        type: 'value',
+                        boundaryGap: [0, '100%'],
+
+                    },
+                    series: [
+                        {
+                            name: '新增文章',
+                            type: 'line',
+                            smooth: true,
+                            symbol: 'emptyCircle',
+                            symbolSize: 8,
+                            sampling: 'average',
+                            itemStyle: {
+                                color: '#ff9c2c'
+                            },
+                            areaStyle: {
+                                color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{
+                                    offset: 0,
+                                    color: '#fee4bf'
+                                }, {
+                                    offset: 1,
+                                    color: '#fffae9'
+                                }])
+                            },
+                            data: yData
+                        }
+                    ]
+                };
+                // 使用刚指定的配置项和数据显示图表。
+                myChart.setOption(option);
             }
-            // 使用刚指定的配置项和数据显示图表。
-            myChart.setOption(option);
-        }
+        })()
+
+
     </script>
 
     <!-- 环形图 -->
     <script>
-        // 基于准备好的dom，初始化echarts实例
-        var myChart1 = echarts.init(document.getElementById('pie_show'));
+            (function () {
+                var myChart = echarts.init(document.getElementById('pie_show'));
+                var nData = [];
+                var sData = [];
+                //(1).实例化ajax对象
+                var xhr = new XMLHttpRequest();
+                //(2).设置请求方法和地址
+                //get请求的数据直接添加在url的后面 格式是 url?key=value
+                xhr.open('get', 'http://localhost:8080/api/v1/admin/data/category');
+                xhr.setRequestHeader('Authorization', 'eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJkYXRhIjoiYWRtaW4iLCJleHAiOjIxOTk5Mzg2NDMsImlhdCI6MTU5NTEzODY0M30.Z7pfR3BL7WpUA9BEuxmnF3m5aoVB1nJCdfDQ8pAy0J2ODqXX5AtGHjuSlaDAwxDCAOq0ADzx2s7gdJbhe9EX1SoxMli8Vj8xnnqpnKZlPWaotbGQ4oHO8d7hVEQU0tDin5XQWpL10SqxclQzSZn-5w_mICPlELlEAtzJN7Pfr6k')
+                //(3).发送请求
+                xhr.send();
+                //(4).注册回调函数
+                xhr.onload = function () {
 
-        option1 = {
-            title: {
-                left: 'center',
-                text: '分类文章数量比',
-            },
-            tooltip: {
-                trigger: 'item',
-                formatter: "{a} <br/>{b}: {c} ({d}%)"
-            },
-            legend: {
-                orient: 'horizontal',
-                x: 'center',
-                data: ['爱生活', '趣美味', '爱旅行', '爱电影', '爱保健'],
-                top: 30
-            },
-            color: ['#5885e8', '#13cfd5', '#00ce68', '#ff9565', '#20ff19'],
-            series: [
-                {
-                    name: '分类名称',
-                    type: 'pie',
-                    radius: ['50%', '70%'],
-                    avoidLabelOverlap: false,
-                    label: {
-                        emphasis: {
-                            show: true,
-                            textStyle: {
-                                fontSize: '30',
-                                fontWeight: 'bold'
+                    var backData = JSON.parse(xhr.responseText)
+                    // console.log(backData);
+                    for (var i = 0; i < backData.date.length; i++) {
+                        var obj = backData.date[i];
+                        nData.push(backData.date[i].name)
+                        sData.push({
+                            name: backData.date[i].name,
+                            value: backData.date[i].articles
+                        })
+                    }
+                    loadingecharts()
+                };
+
+                // 指定图表的配置项和数据
+                function loadingecharts() {
+                    var option = {
+                        tooltip: {
+                            trigger: 'item',
+                            formatter: '{a} <br/>{b}: {c} ({d}%)'
+                        },
+                        title: {
+                            left: 'center',
+                            text: '分类文章数量比',
+                        },
+                        color: ['#20ff19', '#5885e8', '#13cfd5', '#00ce68', '#ff9565'],
+                        legend: {
+                            left: 'center',
+                            top: 30,
+                            data: nData
+                        },
+                        series: [
+                            {
+                                name: '分类名称',
+                                type: 'pie',
+                                radius: ['50%', '65%'],
+                                avoidLabelOverlap: false,
+                                data: sData
                             }
-                        }
-                    },
-                    data: [
-                        { value: 335, name: '爱生活' },
-                        { value: 310, name: '趣美味' },
-                        { value: 234, name: '爱旅行' },
-                        { value: 135, name: '爱电影' },
-                        { value: 548, name: '爱保健' }
-                    ]
+                        ]
+                    };
+
+
+
+                    // 使用刚指定的配置项和数据显示图表。
+                    myChart.setOption(option);
                 }
-            ]
-        };
-        // 使用刚指定的配置项和数据显示图表。
-        myChart1.setOption(option1);
+            })()
     </script>
+
     <!-- 柱状图 -->
     <script>
-        // 基于准备好的dom，初始化echarts实例
-        var myChart2 = echarts.init(document.getElementById('column_show'));
+            (function () {
+                var myChart = echarts.init(document.getElementById('column_show'));
 
-        option2 = {
-            title: {
-                left: 'center',
-                text: '分类访问量',
-            },
-            tooltip: {
-                trigger: 'axis',
-                axisPointer: {            // 坐标轴指示器，坐标轴触发有效
-                    type: 'line'        // 默认为直线，可选为：'line' | 'shadow'
-                },
-                
-            },
-            legend: {
-                data: ['爱生活', '趣美味', '爱旅行', '爱电影', '爱保健'],
-                top:30
-            },
-            grid: {
-                left: '3%',
-                right: '4%',
-                bottom: '3%',
-                containLabel: true
-            },
-            xAxis: [
-                {
-                    type: 'category',
-                    data: ['一月', '二月', '三月', '四月']
+                // 指定图表的配置项和数据
+                option = {
+                    tooltip: {
+                        trigger: 'axis',
+                        axisPointer: {            // 坐标轴指示器，坐标轴触发有效
+                            type: 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+                        }
+                    },
+                    title: {
+                        text: '分类访问量',
+                        left: 'center',
+                    },
+                    legend: {
+                        data: ['爱生活', '趣美味', '爱旅行', '爱电影', '爱保健'],
+                        top: 30
+                    },
+                    grid: {
+                        left: '3%',
+                        right: '4%',
+                        bottom: '3%',
+                        containLabel: true
+                    },
+                    xAxis: [
+                        {
+                            type: 'category',
+                            data: ['一月 ', '二月', '三月', '四月']
+                        }
+                    ],
+                    yAxis: [
+                        {
+                            type: 'value'
+                        }
+                    ],
+                    series: [
+                        {
+                            name: '爱生活',
+                            type: 'bar',
+                            data: [320, 332, 301, 334,],
+                            color:'#5885e8'
+                        },
+                        {
+                            name: '趣美味',
+                            type: 'bar',
+                            data: [120, 132, 101, 134,],
+                            color:'#13cfd5'
+                        },
+                        {
+                            name: '爱旅行',
+                            type: 'bar',
+                            data: [220, 182, 191, 234,],
+                            color:'#00ce68'
+                        },
+                        {
+                            name: '爱电影',
+                            type: 'bar',
+                            color:'#ff9565',
+                            data: [150, 232, 201, 154,]
+                        },
+                        {
+                            name: '爱保健',
+                            type: 'bar',
+                            data: [562, 520, 510, 530,],
+                            color:'#20ff19',
+                        },
+                    ]
+                };
+                // 使用刚指定的配置项和数据显示图表。
+                myChart.setOption(option);
+            })()
+    </script>
+    <script>
+        $(function () {
+            //顶部信息统计
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/admin/data/info',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    $('.art_sum').text(backData.totalArticle);
+                    $('artday_new').text(backData.dayArticle);
+                    $('.com_sum').text(backData.totalComment);
+                    $('.comday_new').text(backData.dayComment);
                 }
-            ],
-            yAxis: [
-                {
-                    type: 'value'
-                }
-            ],
-            color: ['#5885e8', '#13cfd5', '#00ce68', '#ff9565', '#20ff19'],
-            series: [
-                {
-                    name: '爱生活',
-                    type: 'bar',
-                    data: [320, 332, 301, 334]
-                },
-                {
-                    name: '趣美味',
-                    type: 'bar',
-                    data: [220, 132, 101, 134]
-                },
-                {
-                    name: '爱旅行',
-                    type: 'bar',
-                    data: [220, 182, 191, 234]
-                },
-                {
-                    name: '爱电影',
-                    type: 'bar',
-                    data: [150, 232, 201, 154]
-                },
-                {
-                    name: '爱保健',
-                    type: 'bar',
-                    data: [262, 118, 364, 426],
-                },
+            });
+            //
+        })
 
-            ]
-        };
-
-
-        // 使用刚指定的配置项和数据显示图表。
-        myChart2.setOption(option2);
     </script>
 </body>
 
