--- a/admin/article_release.html
+++ b/admin/article_release.html
@@ -14,6 +14,13 @@
     <script src="./libs/jquery-1.12.4.min.js"></script>
     <!-- 模板引擎 -->
     <script src="./libs/template-web.js"></script>
+    <script src="./libs/http.js"></script>
+    <!-- 日期插件 -->
+    <link rel="stylesheet" href="./libs/jedate/css/jeDate-test.css">
+    <link rel="stylesheet" href="./libs/jedate/css/jedate.css">
+    <script src="./libs/jedate/js/jedate.js"></script>
+    <!-- 文本插件 -->
+    <script src="./libs/wangEditor.min.js"></script>
 </head>
 
 <body>
@@ -51,11 +58,21 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">发布时间：</label>
                     <div class="col-sm-4">
+                        <div class="jeinpbox">
+                            <input type="text" class="jeinput" id="testico" placeholder="YYYY-MM-DD">
+                            <div class="icons jebtns" onclick="jeDate('#testico',{trigger:false,format: 'YYYY-MM-DD',isinitVal:true,
+                            festival:true,
+                            zIndex:10001,})">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章内容：</label>
                     <div class="col-sm-10">
+                        <div id="editor">
+
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
@@ -67,6 +84,77 @@
             </form>
         </div>
     </div>
+    <script id="category_list" type="text/html">
+     {{each data v}}
+     <option value="{{v.id}}">{{v.name}}</option>
+     {{/each}}
+    </script>
+    <script>
+
+        $(function () {
+            //1.ajax请求渲染文章类别
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    $('.category').html(template('category_list', backData))
+                }
+            });
+            //2.文件预览
+            //1.给file表单元素注册onchange事件
+            $('#inputCover').change(function () {
+                //1.2 获取用户选择的图片
+                var file = this.files[0];
+                //1.3 将文件转为src路径
+                var url = URL.createObjectURL(file);
+                //1.4 将url路径赋值给img标签的src
+                $('.article_cover').attr('src', url);
+            });
+
+            //3.日期插件
+            jeDate("#testico", {
+                format: "YYYY-MM-DD",
+                isTime: false,
+                isinitVal: true,
+                festival: true,
+                zIndex: 10001,
+                minDate: "2014-09-19 00:00:00"
+            })
+            //4.文本插件
+            var E = window.wangEditor
+            var editor = new E('#editor')
+            // 或者 var editor = new E( document.getElementById('editor') )
+            editor.create()
+            //5.文件上传
+            $('.btn-release,.btn-draft').on('click', function (e) {
+                //禁用表单默认提交事件
+                e.preventDefault();
+                var state = $(this).hasClass('btn-release') ? '已发布' : '草稿';
+                //创建FormData对象：参数是表单dom对象
+                var fd = new FormData($('form')[0]);
+                fd.append('date', $('#testico').val())//日期
+                fd.append('content', editor.txt.html())//文本
+                fd.append('state', state)//状态
+                $.ajax({
+                    url: BigNew.article_publish,
+                    type: 'post',
+                    dataType: 'json',
+                    data: fd,
+                    contentType: false,
+                    processData: false,
+                    success: function (backData) {
+                        if(backData.code==200){
+                            alert(backData.msg);
+                            window.location.href='./article_list.html'
+                        }
+                    }
+                });
+            });
+        })
+
+
+    </script>
 </body>
 
 </html>
