--- a/index.html
+++ b/index.html
@@ -227,6 +227,136 @@
     <script src="./js/template-web.js"></script>
     <!-- 引入jq文件 -->
     <script src="./js/jquery-1.12.4.min.js"></script>
+    <!-- 首页焦点图 -->
+    <script id="hotpic" type="text/html">
+     {{each data v}}
+     {{if $index ==0}}
+     <li class="first">
+         {{else}}
+         <li>
+             {{/if}}
+        <a href="./article.html?id={{v.id}}"><img src="{{v.cover}}" alt=""></a>
+        <p>{{v.title}}</p>
+    </li>
+     {{/each}}
+</script>
+    <!-- 文章类型 -->
+    <script id="category" type="text/html">
+
+  <li class="up"></li>
+     {{each data v}} 
+  <li> 
+      <a href="./list.html?id={{v.id}}">{{v.name}}</a>
+    </li>
+  {{/each}}
+</script>
+    <!-- 最新资讯 -->
+    <script id="latest" type="text/html">
+    {{each data v}}
+    <div class="common_news_list">
+        <a href="./article.html?id={{ v.id }}" class="list_pic"><img src="{{v.cover}}" alt=""></a>
+        <h4><a href="./article.html?id={{ v.id }}">{{v.title}} </a></h4>
+        <p>{{@ v.intro}}</p>
+        <div class="new_info">
+            <span>标签：{{v.category}}&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( {{v.read}}
+                )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( {{v.comments}} )</span>
+            <b>发布于 {{v.date}}</b>
+        </div>
+    </div>
+    {{/each}} 
+</script>
+    <!--  一周热门排行 -->
+    <script id="rank" type="text/html">
+    {{each data v}}
+    <li>
+        {{if $index ==0}}
+        <span class="first">
+            {{ else if $index ==1}}
+        <span class="second">
+            {{ else if $index ==2}}
+            <span class="third">
+                {{else}}
+            <span>
+                {{/if}}
+           {{ $index+1 }}</span><a href="./article.html?id={{ v.id }}">{{v.title}}</a></li>
+    {{/each}} 
+</script>
+    <!-- 最新评论 -->
+    <script id="latest_comment" type="text/html">
+    {{each data v}}
+    <li>
+        <span>{{ v.author[0] }}</span>
+        <b><em>{{v.author}}</em> {{v.date}} 说:</b>
+        <strong>{{v.intro}}</strong>
+    </li>
+    {{/each}}
+    </script>
+    <!-- 焦点关注 -->
+    <script id="attention" type="text/html">
+      {{each data v}}
+      <li><a href="#">{{v.intro}}</a></li>
+      {{/each}}
+    </script>
+    <script>
+        $(function () {
+            /* 首页焦点图 */
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/hotpic',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    $('.focus_list').html(template('hotpic', backData))
+                }
+            });
+            /* 文章类型 */
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/category',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    // console.log(backData);
+                    $('.level_two').html(template('category', backData))
+                }
+            });
+            /* 最新资讯 */
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/latest',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    // console.log(backData);
+                    $('.common_news').html(template('latest', backData))
+                }
+            });
+            /*  一周热门排行 */
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/rank',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    $('.hotrank_list').html(template('rank', backData))
+                }
+            });
+            /* 最新评论 */
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/latest_comment',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                  $('.comment_list').html(template('latest_comment',backData))
+                }
+            });
+            /* 焦点关注 */
+            $.ajax({
+                url:'http://localhost:8080/api/v1/index/attention',
+                type:'get',
+                dataType:'json',
+                success: function(backData){
+                   $('.guanzhu_list').html(template('attention',backData))
+                }
+            });
+        })
+    </script>
 </body>
 
 </html>
