--- a/list.html
+++ b/list.html
@@ -227,6 +227,59 @@
     </div>
     <!-- 导包template -->
     <script src="./js/template-web.js"></script>
+    <script id="art_list" type="text/html">
+        {{each data.data v}}
+        <div class="common_news_list">
+            <a href="./article.html?id={{ v.id }}" class="list_pic"><img src="{{v.cover}}" alt=""></a>
+            <h4><a href="./article.html?id={{ v.id }}">{{v.title}} </a></h4>
+            <p>{{@ v.content}}</p>
+            <div class="new_info">
+                <span>标签：{{v.category}}&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( {{v.read}}
+                    )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( {{v.comments}} )</span>
+                <b>发布于 {{v.date}}</b>
+            </div>
+        </div>
+        {{/each}} 
+    </script>
+    <script>
+        $(function () {
+            /* 文章搜索 */
+
+            //一加载默认显示所有页面
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/search',
+                type: 'get',
+                dataType: 'json',
+                data: {
+                    key: $('.search_txt').val(),
+                    page: 1,
+                    perpage: 10
+                },
+                success: function (backData) {
+                    console.log(backData);
+                    $('.setfr').html(template('art_list', backData))
+                }
+            });
+            //点击搜索
+            $('.search_btn').click(function () {
+                $.ajax({
+                    url: 'http://localhost:8080/api/v1/index/search',
+                    type: 'get',
+                    dataType: 'json',
+                    data: {
+                        key: $('.search_txt').val(),
+                        page: 1,
+                        perpage: 10
+                    },
+                    success: function (backData) {
+                        console.log(backData);
+                        $('.setfr').html(template('art_list', backData))
+                    }
+                });
+            })
+
+        })
+    </script>
 </body>
 
 </html>
