--- a/admin/login.html
+++ b/admin/login.html
@@ -27,7 +27,7 @@
         CopyRight © 2019 深圳百秀信息技术股份有限公司<br />All Rights Reserved
       </div>
     </div>
-
+    <!-- 模态框 -->
     <div class="login_form_con">
       <div class="login_title"></div>
       <form class="login_form">
@@ -58,6 +58,7 @@
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
   <script>
+
     /* 登录功能思路
    1.给登录按钮注册点击事件
    2.阻止默认跳转事件（表单submit会自动跳转页面）
@@ -66,56 +67,56 @@
    5.ajax发送请求
    6.处理响应结果   a.成功：跳转管理系统首页    b.失败：提示用户
     */
+
     $(function () {
+      //1.给登录按钮注册点击事件
       $('.input_sub').click(function (e) {
-        e.preventDefault();//阻止表单默认跳转
-        var username = $('.input_txt').val();//获取输入账号名和密码
+        e.preventDefault();//2.阻止默认跳转事件（表单submit会自动跳转页面
+        var username = $('.input_txt').val();//3.获取用户名和密码
         var password = $('.input_pass').val();
+        /*  4.非空判断 */
         if (username.length == 0 || password.length == 0) {
-          $('.modal-body>p').text('用户名和密码不能为空');
-          $('#myModal').modal({//弹出模态框
+          $('.modal-body>p').text('用户名和密码不能为空!')
+          $('#myModal').modal({
             keyboard: false
           })
         }
-
+        /*5.ajax发送请求 */
         $.ajax({
           url: BigNew.user_login,
           type: 'post',
+          dataType: 'json',
           data: {
             username: username,
             password: password
           },
-          dataType: 'json',
           success: function (backData) {
-            localStorage.setItem('token',backData.token)
             if (backData.code == 200) {
-              localStorage.getItem('token', backData.token)
-              $('.modal-body>p').text('登录成功！');
-              $('#myModal').modal({//弹出模态框
+              localStorage.setItem('token', backData.token)
+              $('.modal-body>p').text(backData.msg)
+              $('#myModal').modal({
                 keyboard: false
               })
               $('#myModal').on('hidden.bs.modal', function (e) {
                 window.location.href = './index.html'
               })
             } else {
-              $('.modal-body>p').text('用户名或密码错误！');
-              $('#myModal').modal({//弹出模态框
+              $('.modal-body>p').text(backData.msg)
+              $('#myModal').modal({
                 keyboard: false
+              })
+              $('#myModal').on('hidden.bs.modal', function (e) {
+                window.location.reload();
               })
             }
           }
-        })
+        });
       })
     })
 
-    /*
-请求地址：/admin/user/login
 
-请求方式：post
 
-请求参数
 
-*/
 
 
 
