--- a/admin/article_category.html
+++ b/admin/article_category.html
@@ -14,6 +14,7 @@
     <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
     <!-- 引入模板引擎js文件 -->
     <script src="./libs/template-web.js"></script>
+    <script src="./libs/http.js"></script>
 </head>
 
 <body>
@@ -51,5 +52,120 @@
             </table>
         </div>
     </div>
+    <!-- 模态框 -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="exampleModalLabel">文章类别</h4>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="recipient-name" class="control-label">名称:</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">类别:</label>
+                            <textarea class="form-control" id="message-text"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary btn-confirm">确认</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 模板 -->
+    <script id="category_list" type="text/html">
+     {{each data v}}
+     <tr>
+        <td>{{v.name}}</td>
+        <td>{{v.slug}}</td>
+        <td class="text-center">
+            <a data-id={{v.id}} href="javascript:void(0);" data-toggle="modal"data-target="#myModal" class=" btn btn-info btn-xs btn-edit">编辑</a>
+            <a data-id={{v.id}} href="javascript:void(0);" class="btn btn-danger btn-xs btn-delete">删除</a>
+        </td>
+    </tr>
+    {{/each}}
+    </script>
+    <script>
+        $(function () {
+            //ajax请求数据渲染页面
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    $('.table>tbody').html(template('category_list', backData))
+                }
+            });
+            //点击编辑和新增按钮事件  弹出模态框
+            $('#myModal').on('shown.bs.modal', function (e) {
+                if ($(e.relatedTarget).text() == '新增分类') {
+                    $('.modal-body>form')[0].reset();//清空表单
+                    $('.btn-confirm').text('新增')//修改确认按钮文字
+                } else {
+                    $('.modal-body>form')[0].reset();//清空表单
+                    $('#recipient-name').val($(e.relatedTarget).parent().prev().prev().text())
+                    $('#message-text').val($(e.relatedTarget).parent().prev().text())
+                    $('.btn-confirm').text('编辑')//修改确认按钮文字
+                    $('.btn-confirm').attr('data-id', $(e.relatedTarget).attr('data-id'))
+                }
+            })
+            //模态框确认事件
+            $('.btn-confirm').click(function () {
+                if ($(this).text() == '新增') {
+                    $.ajax({
+                        url: BigNew.category_add,
+                        type: 'post',
+                        dataType: 'json',
+                        data: {
+                            name: $('#recipient-name').val(),
+                            slug: $('#message-text').val()
+                        },
+                        success: function (backData) {
+                            alert(backData.msg);
+                            window.location.reload();
+                        }
+                    });
+                } else {
+                    $.ajax({
+                        url: BigNew.category_edit,
+                        type: 'post',
+                        dataType: 'json',
+                        data: {
+                            id: $('.btn-confirm').attr('data-id'),
+                            name: $('#recipient-name').val(),
+                            slug: $('#message-text').val()
+                        },
+                        success: function (backData) {
+                            alert(backData.msg);
+                            window.location.reload();
+                        }
+                    });
+                }
+            })
+            //btn-delete删除分类
+            $('.table>tbody').on('click', '.btn-delete', function () {
+                $.ajax({
+                    url: BigNew.category_delete,
+                    type: 'post',
+                    dataType: 'json',
+                    data: {
+                        id: $(this).attr('data-id')
+                    },
+                    success: function (backData) {
+                        alert(backData.msg)
+                        window.location.reload();
+                    }
+                });
+            })
+        })
+    </script>
 
 </html>
