--- a/admin/article_list.html
+++ b/admin/article_list.html
@@ -10,9 +10,16 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/iconfont.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./libs/jedate/css/jeDate-test.css">
+    <link rel="stylesheet" href="./libs/jedate/css/jedate.css">
     <script src="./libs/jquery-1.12.4.min.js"></script>
     <!-- 引入模板引擎js文件 -->
     <script src="./libs/template-web.js"></script>
+    <script src="./libs/http.js"></script>
+    <!-- 分页插件 -->
+    <script src="./libs/jquery.twbsPagination.js"></script>
+    <!-- 日期插件 -->
+    <script src="./libs/jedate/js/jedate.js"></script>
 </head>
 
 <body>
@@ -36,11 +43,11 @@
                             <option value="草稿">草稿</option>
                             <option value="已发布">已发布</option>
                         </select>
-                        <button id="btnSearch" class="btn btn-default btn-sm">筛选</button>
+                        <button id="btnSearch" class="btn btn-default btn-sm btn-sx">筛选</button>
                     </form>
                 </div>
                 <div class="col-xs-6">
-                    <a href="article_release.html" class="btn btn-success btn-sm pull-right" id="release_btn">发表文章</a>
+                    <a href="./article_edit.html" class="btn btn-success btn-sm pull-right" id="release_btn">发表文章</a>
                 </div>
             </div>
             <table class="table table-striped table-bordered table-hover mp20">
@@ -69,9 +76,119 @@
                 </tbody>
             </table>
             <div class="row text-center">
+                <ul id="pagination" class="pagination-sm"></ul>
             </div>
         </div>
     </div>
+    <!-- 下拉菜单 -->
+    <script id="category_list" type="text/html">
+        <option value= "">所有分类</option>
+    {{each data v}}
+    <option value="{{v.id}}">{{v.name}}</option>
+    {{/each}}
+    </script>
+    <!-- 文章列表 -->
+    <script id="article_query" type="text/html">
+        {{each data.data v}}
+        <tr>
+            <td>{{v.title}}</td>
+            <td>{{v.author}}</td>
+            <td>{{v.category}}</td>
+            <td class="text-center">{{v.date}}</td>
+            <td class="text-center">{{v.state}}</td>
+            <td class="text-center">
+                <a data-id={{v.id}} href="./article_release.html?id={{v.id}}" class="btn btn-default btn-xs btn-edit">编辑</a>
+                <a data-id={{v.id}} href="javascript:void(0);" class="btn btn-danger btn-xs btn-delete">删除</a>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
+    <script>
+        $(function () {
+            //文章类别下拉菜单
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    $('#selCategory').html(template('category_list', backData))
+                }
+            });
+            //加载文章列表
+            // $.ajax({
+            //     url: BigNew.article_query,
+            //     type: 'get',
+            //     dataType: 'json',
+            //     data: {
+            //         type: $('#selCategory').val(),
+            //         state: $('#selStatus').val(),
+            //         page: 1,
+            //         perpage: 10
+            //     },
+            //     success: function (backData) {
+            //         $('.table>tbody').html(template('article_query', backData))
+            //     }
+            // });
+            //点击筛选
+            $('.btn-sx').click(function (e) {
+                e.preventDefault();
+                $.ajax({
+                    url: BigNew.article_query,
+                    type: 'get',
+                    dataType: 'json',
+                    data: {
+                        type: $('#selCategory').val(),
+                        state: $('#selStatus').val(),
+                        page: 1,
+                        perpage: 10
+                    },
+                    success: function (backData) {
+                        // console.log(backData);
+                        $('.table>tbody').html(template('article_query', backData))
+                        $('#pagination').twbsPagination('destroy');
+                        $('#pagination').twbsPagination({
+                            totalPages: backData.data.totalPage,//总页数
+                            startPage: 1,//开始时显示的当前页面
+                            visiblePages: 10,//可见页数
+                            first: '首页',
+                            prev: '上一页',
+                            next: '下一页',
+                            last: '尾页',
+                            onPageClick: function (event, page) {
+                                $('#page-content').text('Page ' + page);
+                                getLoad(page)
+                            }
+                        });
+                    }
+                });
+            })
+            //页面加载默认加载
+            $('.btn-sx').click();
+            //点击右上角发布文章按钮： 触发左侧 发布文章 a标签的注册事件（点击高亮）
+            $('#release_btn').click(function () {
+                $('.level02>li:eq(1)', window.parent.document).click();
+            })
+            //页码点击函数封装
+            function getLoad(page) {
+                $.ajax({
+                    url: BigNew.article_query,
+                    type: 'get',
+                    dataType: 'json',
+                    data: {
+                        type: $('#selCategory').val(),
+                        state: $('#selStatus').val(),
+                        page: page,
+                        perpage: 10
+                    },
+                    success: function (backData) {
+                        // console.log(backData);
+                        $('.table>tbody').html(template('article_query', backData))
+                    }
+                }
+                )
+            }
+        })
+    </script>
 </body>
 
 </html>
