--- a/admin/article_release.html
+++ b/admin/article_release.html
@@ -10,10 +10,19 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/iconfont.css">
     <link rel="stylesheet" href="css/main.css">
+    <!-- 日期插件CSS -->
+    <link rel="stylesheet" href="./libs/jedate/css/jeDate-test.css">
+    <link rel="stylesheet" href="./libs/jedate/css/jedate.css">
     <!-- jq -->
     <script src="./libs/jquery-1.12.4.min.js"></script>
     <!-- 模板引擎 -->
     <script src="./libs/template-web.js"></script>
+    <script src="./libs/http.js"></script>
+    <!-- 日期插件 -->
+    <script src="./libs/jedate/js/jedate.js"></script>
+    <!-- 文本插件 -->
+    <script src="./libs/wangEditor.min.js"></script>
+
 </head>
 
 <body>
@@ -51,11 +60,20 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">发布时间：</label>
                     <div class="col-sm-4">
+                        <div class="jeinpbox">
+                            <input type="text" class="jeinput" id="testico" placeholder="YYYY-MM-DD">
+                            <div class="icons jebtns" onclick="jeDate('#testico',{trigger:false,format: 'YYYY-MM-DD',zIndex: 10001,
+                            isinitVal: true})">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章内容：</label>
                     <div class="col-sm-10">
+                        <div id="editor">
+
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
@@ -67,6 +85,90 @@
             </form>
         </div>
     </div>
+    <script id="category_list" type="text/html">
+        {{each data v}}
+        <option value="{{v.id}}">{{v.name}}</option>
+        {{/each}}
+  </script>
+    <script>
+        $(function () {
+           $.ajax({
+               url: BigNew.category_list,
+               type: 'get',
+               dataType: 'json',
+               success: function (backData) {
+                   $('.category').html(template('category_list', backData))
+               }
+           });
+            var id = window.location.href.split('=')[1];
+
+            /* 请求数据渲染页面 */
+
+            $.ajax({
+                url: BigNew.article_search,
+                type: 'get',
+                dataType: 'json',
+                data: { id: id },
+                success: function (backData) {
+                    console.log(backData);
+                    $('#inputTitle').val(backData.data.title);
+                    $('.article_cover').attr('src',backData.data.cover);
+                    $('.category').val(backData.data.categoryId);
+                    $('#testico').val(backData.data.date);
+                    editor.txt.text(backData.data.content)
+                }
+            });
+
+            /* 日期插件初始化 */
+            jeDate("#testico", {
+                format: "YYYY-MM-DD",
+                isTime: false,
+                zIndex: 10001,
+                isinitVal: true,
+                minDate: "2014-09-19 00:00:00"
+            })
+            /* 文本插件初始化 */
+            var E = window.wangEditor
+            var editor = new E('#editor')
+            // 或者 var editor = new E( document.getElementById('editor') )
+            editor.create()
+
+            /* 文件预览 */
+            //1.给file表单元素注册onchange事件
+            $('#inputCover').change(function () {
+                //1.2 获取用户选择的图片
+                var file = this.files[0];
+                //1.3 将文件转为src路径
+                var url = URL.createObjectURL(file);
+                //1.4 将url路径赋值给img标签的src
+                $('。article_cover').attr('src', url);
+            });
+            /* 文件上传 */
+            $('.btn-edit,.btn-draft').on('click', function (e) {
+                var state = $(this).hasClass('btn-edit') ? '已发布' : '草稿'
+                //禁用表单默认提交事件
+                e.preventDefault();
+                //创建FormData对象：参数是表单dom对象
+                var fd = new FormData($('form')[0])
+                fd.append('state', state);
+                fd.append('date', $('#testico').val());
+                fd.append('content', editor.txt.html());
+                fd.append('id', id)
+                $.ajax({
+                    url: BigNew.article_edit,
+                    type: 'post',
+                    dataType: 'json',
+                    data: fd,
+                    contentType: false,
+                    processData: false,
+                    success: function (backData) {
+                        alert(backData.msg);
+                        window.location.reload();
+                    }
+                });
+            });
+        })
+    </script>
 </body>
 
 </html>
