--- a/admin/comment_list.html
+++ b/admin/comment_list.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="./libs/jquery-1.12.4.min.js"></script>
   <script src="./libs/template-web.js"></script>
+  <script src="./libs/http.js"></script>
+  <!-- 分页插件 -->
+  <script src="./libs/jquery.twbsPagination.js"></script>
 </head>
 
 <body>
@@ -142,7 +145,7 @@
         </tbody>
       </table>
       <div class="row text-center">
-        <ul class="pagination pagination-sm">
+        <!--    <ul class="pagination pagination-sm">
           <li class="page-item first disabled"><a href="#" class="page-link">首页</a></li>
           <li class="page-item prev disabled"><a href="#" class="page-link">上一页</a></li>
           <li class="page-item active"><a href="#" class="page-link">1</a></li>
@@ -154,12 +157,106 @@
           <li class="page-item"><a href="#" class="page-link">7</a></li>
           <li class="page-item next"><a href="#" class="page-link">下一页</a></li>
           <li class="page-item last"><a href="#" class="page-link">尾页</a></li>
-        </ul>
+        </ul> -->
         <ul id="pagination" class="pagination-sm"></ul>
       </div>
 
     </div>
   </div>
+  <script id="comment_list" type="text/html">
+    {{each data.data v}}
+    <tr>
+      <td>{{v.author}}</td>
+      <td>{{v.content}}</td>
+      <td>{{v.title}}</td>
+      <td>{{v.date}} {{v.time}}</td>
+      <td>{{v.state}}</td>
+      <td class="text-center">
+        {{if v.state =='已通过'}}
+          <a data-id={{v.id}} href="javascript:void(0);;" class="btn btn-warning btn-xs btn-refuse">拒绝</a>
+        {{else if v.state =='待审核'}}
+        <a data-id={{v.id}} href="javascript:void(0);;" class="btn btn-success btn-xs btn-sure">批准</a>
+        {{ /if}}
+        <a data-id={{v.id}} href="javascript:void(0);;" class="btn btn-danger btn-xs btn-delete">删除</a>
+        
+      </td>
+    </tr>
+    {{/each}}
+  </script>
+  <script>
+    $(function () {
+      $.ajax({
+        url: BigNew.comment_list,
+        type: 'get',
+        dataType: 'json',
+        data: {
+          page: 1,
+          perpage: 10
+        },
+        success: function (backData) {
+          console.log(backData);
+          $('.table>tbody').html(template('comment_list', backData))
+          $('#pagination').twbsPagination('destroy');
+          $('#pagination').twbsPagination({
+            totalPages: backData.data.totalPage,//总页数
+            startPage: 1,//开始时显示的当前页面
+            visiblePages: 10,//可见页数
+            first: '首页',
+            prev: '上一页',
+            next: '下一页',
+            last: '尾页',
+            onPageClick: function (event, page) {
+              $('#page-content').text('Page ' + page);
+              getLoad(page)
+            }
+          });
+        }
+      });
+      //封装分页插件点击函数
+      function getLoad(page) {
+        $.ajax({
+          url: BigNew.comment_list,
+          type: 'get',
+          dataType: 'json',
+          data: {
+            page: page,
+            perpage: 10
+          },
+          success: function (backData) {
+            // console.log(backData);
+            $('.table>tbody').html(template('comment_list', backData))
+          }
+        }
+        )
+      }
+      //点击 批准 拒绝 待审核
+      $('.table>tbody').on('click', '.btn-refuse,.btn-sure,.btn-delete', function () {
+        switch (true) {
+          case $(this).hasClass('btn-refuse'):
+            var url = BigNew.comment_reject;
+            break;
+          case $(this).hasClass('btn-sure'):
+            var url = BigNew.comment_pass;
+            break;
+          default:
+            var url = BigNew.comment_delete;
+            break;
+        }
+        $.ajax({
+          url: url,
+          type: 'post',
+          dataType: 'json',
+          data: { id: $(this).attr('data-id') },
+          success: function (backData) {
+            if(backData.code==200){
+              alert(backData.msg);
+            window.location.reload();
+            }
+          }
+        });
+      })
+    })
+  </script>
 </body>
 
 </html>
