--- a/admin/index.html
+++ b/admin/index.html
@@ -13,8 +13,8 @@
     <script src="./libs/jquery-1.12.4.min.js"></script>
     <!-- 导入bootstrap的js文件 -->
     <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
-     <!-- 引入基地址文件 -->
-  <script src="./libs/http.js"></script>
+    <!-- 引入基地址文件 -->
+    <script src="./libs/http.js"></script>
 </head>
 
 <body>
@@ -27,20 +27,20 @@
         </div>
         <!-- 左侧导航栏 -->
         <div class="menu">
-            <div class="level01 active"><a href="#" target="main_frame"><i
+            <div class="level01 active"><a href="./main_count.html" target="main_frame"><i
                         class="iconfont icon-yidiandiantubiao04"></i><span>首页</span></a></div>
             <div class="level01"><a href="#"><i class="iconfont icon-icon-article"></i><span>文章管理</span><b
                         class="iconfont icon-arrowdownl"></b></a></div>
             <ul class="level02">
-                <li><a href="#" target="main_frame"><i class="iconfont icon-previewright"></i><span>文章列表</span></a></li>
-                <li><a href="#" target="main_frame"><i class="iconfont icon-previewright"></i><span>发表文章</span></a></li>
-                <li><a href="#" target="main_frame"><i class="iconfont icon-previewright"></i><span>文章类别管理</span></a>
+                <li><a href="./article_list.html" target="main_frame"><i class="iconfont icon-previewright"></i><span>文章列表</span></a></li>
+                <li><a href="./article_edit.html" target="main_frame"><i class="iconfont icon-previewright"></i><span>发表文章</span></a></li>
+                <li><a href="./article_category.html" target="main_frame"><i class="iconfont icon-previewright"></i><span>文章类别管理</span></a>
                 </li>
             </ul>
 
-            <div class="level01"><a href="#" target="main_frame"><i
+            <div class="level01"><a href="./comment_list.html" target="main_frame"><i
                         class="iconfont icon-comment"></i><span>评论管理</span></a></div>
-            <div class="level01" id="user"><a href="#" target="main_frame"><i
+            <div class="level01" id="user"><a href="./user.html" target="main_frame"><i
                         class="iconfont icon-user"></i><span>个人中心</span></a></div>
         </div>
         <!-- 顶部栏 -->
@@ -53,42 +53,49 @@
         </div>
         <!-- 右侧主体内容 -->
         <div class="main" id="main_body">
-
+            <iframe src="./main_count.html" frameborder="0" name="main_frame"
+                style="width: 100%; height: 100%;"></iframe>
         </div>
     </div>
     <script>
-        //请求用户信息
-        /* 
-        请求地址：/admin/user/info
-
-        请求方式：get
-
-        请求参数：无
-
-        返回数据：
-
-        */
-
-
+        /* 登录页面渲染用户信息 */
         $(function () {
             $.ajax({
                 url: BigNew.user_info,
                 type: 'get',
                 dataType: 'json',
                 success: function (backData) {
-                    if (backData.code == 200) {
-                        $('.user_center_link>img').attr('src', backData.data.userPic)
-                        $('.user_center_link>span').text(backData.data.nickname)
-                        $('.user_info>img').attr('src', backData.data.userPic)
-                    }
+                    $('.user_info>img').attr('src', backData.data.userPic);//头像
+                    $('.user_info>span').text('欢迎  ' + backData.data.nickname)//名字
+                    $('.user_center_link>img').attr('src', backData.data.userPic)//右上角图标
+                }
+            });
+            /* logout退出登录功能 */
+            $('.logout').click(function () {
+                localStorage.removeItem('token');
+                window.location.href = './login.html'
+            })
+            /* 右上方点击个人中心a标签  侧边栏个人中心对应高亮 */
+            $('.user_center_link').click(function () {
+                $('#user').addClass('active').siblings().removeClass('active');
+            })
+            /* 点击侧边栏显示下拉动画  箭头旋转 */
+            $('.level01').click(function () {
+                $(this).addClass('active').siblings().removeClass('active');
+                if ($(this).index() == 1) {
+                    $('.icon-arrowdownl').toggleClass('rotate0');
+                    $('.level02').slideToggle();
+                    $('.level02>li:eq(0) a')[0].click();
+                } else {
+                    $('.level02>li').removeClass('active')
                 }
             })
-            $('.logout').click(function(){
-                localStorage.removeItem('token');
-                window.location.href='./login.html'
-            })
-        })
+            /* 点击二级菜单显示对于高亮 */
+            $('.level02>li').click(function () {
+                $(this).addClass('active').siblings().removeClass('active');
+            });
 
+        })
 
     </script>
 </body>
