--- a/article.html
+++ b/article.html
@@ -55,29 +55,31 @@
 
     <div class="main_con clearfix">
         <div class="left_con setfr">
-            <div class="breadcrumb">
-                当前位置： <a href="#">首页</a> &gt; <a href="#">科技</a> &gt; 文章详情
-            </div>
-            <h3 class="article_title">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</h3>
-            <div class="article_info">杰克 发布于 2019-05-08 07:08:46&nbsp;&nbsp;&nbsp;分类: 奇趣事&nbsp;&nbsp;&nbsp;阅读:
-                (98)&nbsp;&nbsp;&nbsp;评论: (0)</div>
-            <div class="article_con">
+            <div id="info">
+                <div class="breadcrumb">
+                    当前位置： <a href="#">首页</a> &gt; <a href="#">科技</a> &gt; 文章详情
+                </div>
+                <h3 class="article_title">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</h3>
+                <div class="article_info">杰克 发布于 2019-05-08 07:08:46&nbsp;&nbsp;&nbsp;分类: 奇趣事&nbsp;&nbsp;&nbsp;阅读:
+                    (98)&nbsp;&nbsp;&nbsp;评论: (0)</div>
+                <div class="article_con">
 
-                <p>“上天入地”还不够？硅谷“钢铁侠”马斯克名下一家低调的公司最近又融了一大笔钱。</p>
+                    <p>“上天入地”还不够？硅谷“钢铁侠”马斯克名下一家低调的公司最近又融了一大笔钱。</p>
 
-                <p>马斯克投资的一家小型且不为人熟知的脑机接口（brain-computer
-                    interface）公司Neuralink披露，该公司融到了3900万美元，虽然不及公司计划的融资额5100万美元，但也比上次的融资多了不少。</p>
+                    <p>马斯克投资的一家小型且不为人熟知的脑机接口（brain-computer
+                        interface）公司Neuralink披露，该公司融到了3900万美元，虽然不及公司计划的融资额5100万美元，但也比上次的融资多了不少。</p>
 
-                <p>两年前该公司曾计划融资1亿美元，但只拿到了2700万美元的融资。</p>
+                    <p>两年前该公司曾计划融资1亿美元，但只拿到了2700万美元的融资。</p>
 
-                <p>在Neuralink递交给美国证券交易委员会（SEC）的材料中，并没有披露融资是否来自传统的风险投资者或者来自该公司的员工。</p>
+                    <p>在Neuralink递交给美国证券交易委员会（SEC）的材料中，并没有披露融资是否来自传统的风险投资者或者来自该公司的员工。</p>
 
-                <p>2016年，Neuralink在美国加利福尼亚州以医学研究公司的名义成立，之后一直低调运行。</p>
+                    <p>2016年，Neuralink在美国加利福尼亚州以医学研究公司的名义成立，之后一直低调运行。</p>
 
-            </div>
-            <div class="article_links">
-                上一篇： <a href="#">世界第一台可以玩游戏的冰箱</a><br>
-                下一篇： <a href="#">世界第一个可以玩游戏的马桶、世界上第一个可以玩游戏的茶杯</a>
+                </div>
+                <div class="article_links">
+                    上一篇： <a href="#">世界第一台可以玩游戏的冰箱</a><br>
+                    下一篇： <a href="#">世界第一个可以玩游戏的马桶、世界上第一个可以玩游戏的茶杯</a>
+                </div>
             </div>
 
             <form action="" class="comment_form">
@@ -93,9 +95,9 @@
                     <input type="submit" name="" value="评 论" class="comment_sub"></div>
             </form>
 
-            <div class="comment_count">
+            <!-- <div class="comment_count">
                 4条评论
-            </div>
+            </div> -->
 
             <div class="comment_list_con">
                 <div class="comment_detail_list">
@@ -208,7 +210,167 @@
     <!-- 引入模板引擎js文件 -->
     <script src="./js/template-web.js"></script>
     <script src="./js/jquery-1.12.4.min.js"></script>
+    <!-- 文章详细信息模板 -->
+    <script id="info_list" type="text/html">
 
+       <div class="breadcrumb">
+        当前位置： <a href="./article.html?id={{ data.prev.id }}">首页</a> &gt; <a href="./article.html?id={{ data.prev.id }}">{{data.category}}</a> &gt; 文章详情
+    </div>
+    <h3 class="article_title">{{data.title}}</h3>
+    <div class="article_info">{{data.author}} 发布于 {{data.date}}&nbsp;&nbsp;&nbsp;分类: {{data.category}}&nbsp;&nbsp;&nbsp;阅读:
+        ({{data.read}})&nbsp;&nbsp;&nbsp;评论: ({{data.comments}})</div>
+    <div class="article_con">
+
+        <p>{{data.content}}</p>
+    </div>
+    <div class="article_links">
+        {{ if data.prev }}
+        上一篇： <a href="./article.html?id={{ data.prev.id }}">{{data.prev.title}}</a><br>
+        {{/if}}
+        {{ if data.next }}
+        下一篇： <a href="./article.html?id={{ data.next.id }}">{{data.next.title}}</a>
+        {{/if}}
+    </div>
+     </script>
+    <!-- 评论列表 -->
+    <script id="get_comment" type="text/html">
+        <div class="comment_count">
+            {{data.length}}条评论
+        </div>
+        {{ each data v }}
+        <div class="comment_detail_list">
+            <div class="person_pic fl">{{v.author[0]}}</div>
+            <div class="name_time fl"><b>{{v.author}}</b><span>{{v.date}} {{v.time}}</span></div>
+            <div class="comment_text fl">
+                {{v.content}}
+            </div>
+        </div>
+        {{/each}}
+    </script>
+    <!-- 文章类型 -->
+    <script id="category" type="text/html">
+        <li class="up"></li>
+        {{each data v}}
+       <li><a href="./list.html?id={{v.id}}">{{v.name}}</a></li>
+       {{/each}}
+    </script>
+    <!-- 热门排行 -->
+    <script id="rank" type="text/html">
+    {{each data v}}
+    <li>
+    {{if $index==0}}
+     <span class="first">
+    {{else if $index==1}}
+    <span class="second">
+    {{else if $index==2}}
+    <span class="third">
+    {{else}}
+    <span>
+    {{/if}}
+    {{$index+1}}</span>
+    <a href="./article.html?id={{ v.id }}">{{v.title}}</a></li>
+    {{/each}}
+</script>
+    <!-- 最新评论 -->
+    <script id="comment_li" type="text/html">
+    {{each data v}}
+    <li>
+     <span>{{v.author[0]}}</span>
+     <b><em>{{v.author}}</em> {{v.date}} {{v.time}}说:</b>
+     <strong>{{v.intro}}</strong>
+    </li>
+    {{/each}}
+     </script>
+    <!-- 焦点关注 -->
+    <script id="attention" type="text/html">
+         {{each data v}}
+ <li><a href="./article.html?id={{ v.id }}">{{v.intro}}</a></li>
+ {{/each}}
+     </script>
+
+    <script>
+        $(function () {
+            /* 文章详细内容 */
+            var id = window.location.href.split('=')[1]
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/article',
+                type: 'get',
+                dataType: 'json',
+                data: { id: id },
+                success: function (backData) {
+                    /// console.log(backData);
+                    $('#info').html(template('info_list', backData))
+                }
+            });
+            /* 评论列表 */
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/get_comment',
+                type: 'get',
+                dataType: 'json',
+                data: { articleId: id },
+                success: function (backData) {
+                    console.log(backData);
+                    $('.comment_list_con').html(template('get_comment', backData));
+                }
+            });
+            /* 文章类型 */
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/category',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    $('.level_two').html(template('category', backData))
+                }
+            });
+            /* 热门排行 */
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/rank',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    $('.content_list').html(template('rank', backData))
+                }
+            });
+            /* 最新评论 */
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/latest_comment',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    $('.comment_list').html(template('comment_li', backData))
+                }
+            });
+            /* 焦点关注 */
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/attention',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    // console.log(backData);
+                    $('.guanzhu_list').html(template('attention', backData))
+                }
+            });
+            /* 发表评论 */
+            $('.comment_sub').click(function (e) {
+                e.preventDefault();
+                $.ajax({
+                    url: 'http://localhost:8080/api/v1/index/post_comment',
+                    type: 'post',
+                    dataType: 'json',
+                    data: {
+                        author: $('.comment_name').val(),
+                        content: $('.comment_input').val(),
+                        articleId: id
+                    },
+                    success: function (backData) {
+                        alert(backData.msg)
+                        window.location.reload();
+                    }
+                });
+            })
+
+        })
+    </script>
 </body>
 
 </html>
